Dicsount Calculator With JS

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--Google Font Family Link-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Righteous&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <!-- CDN Link For Icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -18,14 +18,14 @@
     <div class="container">
         <h2>Discount Calculator</h2>
         <p>Enter the bill amount and discount in percentage</p>
-        <form action="">
-            <label for="" class="lableBill">Bill Amount</label>
-            <input type="number" name="" id=""><br>
-            <label for="">Discount Percentage</label>
-            <input type="number"><br>
-            <button type="submit">Calculate</button>
+        <form>
+            <label class="lableBill">Bill Amount</label>
+            <input type="number" name="" id="bill"><br>
+            <label>Discount Percentage</label>
+            <input type="number" id="discount"><br>
+            <button type="button" id="calculate">Calculate</button>
         </form>
-        <p id="total">Total Discount Amount ==</p>
+        <p id="total">Total Discount Amount :</p>
         <footer>
             <i id="logo" class="fa fa-linkedin-square" aria-hidden="true"></i>
             <i id="logo" class="fa fa-google" aria-hidden="true"></i>
@@ -33,6 +33,6 @@
             <i id="logo" class="fa fa-facebook-official" aria-hidden="true"></i>
             </footer>  
     </div> 
-     
+    <script src="script.js"></script>
 </body>
 </html>
